syntax = "proto3";

package fuelfinder;

option go_package = "main/pkg/fuelfinder";

service FuelFinder {
    rpc QueryArea(Geofence) returns (StationItems);
    rpc Upload(StationItems) returns (UploadedItems);
    rpc DistinctBrands(Empty) returns (Brands);
}

message Empty { }

message UploadedItems {
    int32 count = 1;
}

message Geofence {
    float longitude = 1;
    float latitude = 2;
    float radius = 3;
    repeated string brands = 4;
}

message StationItem {
	int64 created_at = 1;
    string site_id = 2;
    string brand = 3;
    string address = 4;
    string postcode = 5;
	Location location = 6;
	float e5 = 7;
	float e10 = 8;
	float b7 = 9;  
	float sdv = 10;
    double distance = 11;
}

message Location {
	string type = 1;
	repeated float coordinates = 2;
}

message StationItems {
    repeated StationItem items = 1;
}

message Brands {
    repeated string brands = 1;
}